[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musig"
version = "0.0.1"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Implementation of the MuSig system for n-of-n multisignatures."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "pynacl >= 1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/musig"
"Bug Tracker" = "https://github.com/k98kurz/musig/issues"
